Improve styling and indention, breadcrumbs and row highlighting
* Add icon and format 'back' and other rows

* Syle modal column header

* Fix linting

* Fix indention

* Remove top padding from top of listing

* Remove uneven padding on table header

* Make last part of path breadcrumbs not a link

* Update alternate row highlighting if a 'Back' row

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
@@ -2,7 +2,14 @@
   padding-left: 35px;
 }
 
+.normal-indention {
+  padding-left: 10px;
+}
 .container {
   display: flex;
   align-items: center;
+}
+
+.path {
+  padding-left: 15px;
 }
