Make back header use a link instead of button

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
@@ -13,3 +13,11 @@
 .path {
   padding-left: 15px;
 }
+
+.link {
+  color: var(--global-color-accent--normal);
+  font-weight: normal; /*override bold bootstrap heeader*/
+  /* extra padding to make link (back link in header) similar height to rows*/
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
