Improve names of indention-related classes

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
@@ -1,13 +1,14 @@
-.indented {
-  padding-left: 35px;
-}
-
-.normal-indention {
-  padding-left: 10px;
-}
 .container {
   display: flex;
   align-items: center;
+}
+
+.children {
+  padding-left: 35px;
+}
+
+.parent {
+  padding-left: 10px;
 }
 
 .path {
