--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -15,7 +15,8 @@
         padding: 1.3rem;
     }
     .breadcrumbs {
-      padding: 0 10px 0;
+      padding-top: 5px;
+      padding-bottom: 5px;
       color: #707070;
     }
     .filesListing {
