--- a/client/src/styles/trumps/icon.css
+++ b/client/src/styles/trumps/icon.css
@@ -9,9 +9,10 @@
   display: inline-flex; /* `flex` to align `::before`; `inline` to not trigger new line */
                         /* a modern slimmer alternative to `&::before { display: block; }` */
 }
+/* NOTE: After PR #104, you may remove these styles without consequence
 /* Hide accessibile text of non-empty `.icon`'s */
-.icon         { visibility: hidden; }
-.icon::before { visibility: visible; }
+.icon:not(svg)         { visibility: hidden; }
+.icon:not(svg)::before { visibility: visible; }
 
 /* Aliases */
 /* .icon-contract */.icon-collapse::before {
