FP-341: UI/UX: Fix breadcrumbs pending FP-120

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -13,6 +13,8 @@
         padding: 1.3rem;
     }
     .breadcrumbs {
+      font-size: 20px; /* TODO: During FP-120, replace this with commented style below */
+      // font-size: 12px; /* 10px design * 1.2 design-to-app ratio */
       padding: 0 10px 0;
       color: #707070;
     }
