Fix breadcrumbs fontsize for modals and in non-modal listing

--- a/client/src/components/DataFiles/DataFiles.scss
+++ b/client/src/components/DataFiles/DataFiles.scss
@@ -33,6 +33,10 @@
   padding-left: 20px;
 }
 
+.data-files-breadcrumbs{
+  font-size: 18px;
+}
+
 /* Overrides */
 
 /* Override Bootstrap `.row`, because we need to
