--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -14,6 +14,7 @@
         padding: 1.3rem;
     }
     .breadcrumbs {
+      font-size: 12px;
       padding-top: 5px;
       padding-bottom: 5px;
       color: #707070;
