--- a/client/src/components/History/History.module.scss
+++ b/client/src/components/History/History.module.scss
@@ -16,8 +16,7 @@
 }
 
 .content {
-    /* FAQ: Design is inconsistent, but averages about `10.5px` */
-    padding-top: 0.75rem; /* ~10px * design * 1.2 design-to-app ratio */
+    padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
     padding-left: 1.25em;
 }
 
