--- a/client/src/components/_common/DropdownSelector/DropdownSelector.module.css
+++ b/client/src/components/_common/DropdownSelector/DropdownSelector.module.css
@@ -3,19 +3,20 @@
   composes: form-control from '../../../styles/components/bootstrap.form.css';
   composes: select-css from '../../../styles/components/external.select-css.css';
 
-  font-size: 0.75rem; /* ~10px * design * 1.2 design-to-app ratio */
+  font-size: 0.75rem; /* ~10px design * 1.2 design-to-app ratio */
                       /* WARNING: "iOS Safari will [force-zoom site] if […] less than 16px" */
                       /* SEE: https://github.com/filamentgroup/select-css#notes-on-the-css */
+  width: auto; /* overwrite `.form-control` (from Bootstrap) */
   height: auto; /* overwrite `.form-control` (from Bootstrap) */
-  padding: 0; /* overwrite `.form-control` (from bootstrap.form.css) */
-  padding-left: 6px;
+  padding: 0 6px; /* overwrite `.form-control` (from bootstrap.form.css) */
+                  /* 5px design * 1.2 design-to-app ratio */
 
   background-color: var(--global-color-primary--xx-light);
   /* TODO: Use SVG data URL that matches design */
-	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
-	background-repeat: no-repeat;
-	background-position: right 0.7em top 50%;
-  background-size: 0.65em auto;
+  background-image: url("data:image/svg+xml,%3Csvg id='tacc-arrows' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 130.34 292.4'%3E%3Cdefs%3E%3Cstyle%3E.arrow%7Bfill:%23484848;%7D%3C/style%3E%3C/defs%3E%3Cg id='tacc-arrows——root'%3E%3Cpath id='Path_3088' data-name='Path 3088' class='arrow' d='M82.24,96.17,148.09,0l64.45,96.17Z' transform='translate(-82.2)'/%3E%3Cpath id='Path_3089' data-name='Path 3089' class='arrow' d='M212.5,196.23,146.65,292.4,82.2,196.23Z' transform='translate(-82.2)'/%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 6px top 50%; /* 5px design * 1.2 design-to-app ratio */
+  background-size: auto 10px; /* ~8px design * 1.2 design-to-app ratio (rounded) */
 
   border-color: var(--global-color-primary--dark);
   color: var(--global-color-accent--normal);
