--- a/client/src/components/_common/DropdownSelector/DropdownSelector.module.css
+++ b/client/src/components/_common/DropdownSelector/DropdownSelector.module.css
@@ -12,7 +12,6 @@
                   /* 5px design * 1.2 design-to-app ratio */
 
   background-color: var(--global-color-primary--xx-light);
-  /* TODO: Use SVG data URL that matches design */
   background-image: url("data:image/svg+xml,%3Csvg id='tacc-arrows' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 130.34 292.4'%3E%3Cdefs%3E%3Cstyle%3E.arrow%7Bfill:%23484848;%7D%3C/style%3E%3C/defs%3E%3Cg id='tacc-arrows——root'%3E%3Cpath id='Path_3088' data-name='Path 3088' class='arrow' d='M82.24,96.17,148.09,0l64.45,96.17Z' transform='translate(-82.2)'/%3E%3Cpath id='Path_3089' data-name='Path 3089' class='arrow' d='M212.5,196.23,146.65,292.4,82.2,196.23Z' transform='translate(-82.2)'/%3E%3C/g%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: right 6px top 50%; /* 5px design * 1.2 design-to-app ratio */
@@ -27,6 +26,9 @@
   /* border-color: var(--global-color-primary--dark); */
   color: var(--global-color-accent--normal);
 }
+.container[multiple] {
+  background-image: none;
+}
 
 /* Children */
 
@@ -39,3 +41,7 @@
 }
 .container optgroup { color: var(--global-color-primary--dark); }
 .container option { color: var(--global-color-primary--x-dark); }
+
+/* FAQ: Ability to style selected option is browser-dependent */
+/* SEE: https://developer.mozilla.org/en-US/docs/Web/CSS/:checked */
+/* .container[multiple] option:checked {} */
