--- a/client/src/components/_common/DropdownSelector/DropdownSelector.module.css
+++ b/client/src/components/_common/DropdownSelector/DropdownSelector.module.css
@@ -25,7 +25,7 @@
   background-position: right 6px top 50%; /* 5px design * 1.2 design-to-app ratio */
   background-size: auto 10px; /* ~8px design * 1.2 design-to-app ratio (rounded) */
 
-  border-color: var(--global-color-primary--dark);
+  border-color: var(--global-color-primary--dark); /* overwrite `.form-control` (from bootstrap.form.css) */
   color: var(--global-color-accent--normal);
   font-style: italic;
   font-weight: 500;
