--- a/client/src/components/History/JobHistoryModal.module.scss
+++ b/client/src/components/History/JobHistoryModal.module.scss
@@ -40,8 +40,9 @@
   padding-right: 0.3em;
 }
 
-.container {
+.modal-body-container {
   width: 100%;
+  height: 70vh;
   display: flex;
   flex-direction: row;
 }
@@ -51,26 +52,31 @@
   min-width: 200px;
 }
 
+.left-panel.n {
+  border-right: var(--border);
+  min-width: 200px;
+}
+
 .right-panel {
   width: 100%;
-  padding: 5px;
 }
 
 .panel-content {
-  padding: 25px;
+  padding: 20px;
 }
 
 .section {
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-.section-entry {
-  padding-left: 15px;
+.entry-row-container{
   display: flex;
   flex-direction: row;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .entry-label {
@@ -78,6 +84,14 @@
 }
 .entry-value {
   flex-basis: 70%;
+}
+
+.lower-level-entry{
+  padding-left: 15px;
+}
+
+.top-level-entry{
+  font-weight: 800;
 }
 
 .alternating-background:nth-child(odd) {
