task/FP-391: Notifications (#77)
* demo for channels/saga websocket integration

* formatting

* condense nginx

* set max upload size to 500m

* formatting

* remove ws4redis; prepare daphne

* remove ws4redis

* notifications backend

* notifications frontend wip

* styling; add notification badge

* fix tests

* add reconnecting web socket

* remove unneeded docker compose config

* genericize some nginx config

* fix frontend tests

* add unit tests

* add consumer unit tests

* remove unused import

* simplify settings

* update pytest

* various adjustments to match feedback

* Update client/src/components/History/HistoryBadge/HistoryBadge.module.scss

Co-authored-by: W. Bomar <62723358+tacc-wbomar@users.noreply.github.com>

* add staff and superuser channel groups

* add upper limit to badge

* remove old react table css

* match alternating table color; change to even rows

* app tray item min width

* styling and reorg

* catch anonymous user ws disconnect

* simplify css; add aria role to badge

* remove unused imports; history re-org

* fix test

* color for new notifications; update job on job notif

* fix unit tests

* Fix updating job status by providing a new job list (#106)

Instead of mutating our current's state list of jobs.
See https://redux.js.org/troubleshooting

* Update client/src/components/History/History.module.scss

Co-authored-by: W. Bomar <62723358+tacc-wbomar@users.noreply.github.com>

* Update client/src/components/History/History.module.scss

Co-authored-by: W. Bomar <62723358+tacc-wbomar@users.noreply.github.com>

* fix unit tests

* use role instead of test id for tests

* FP-391-----Alter counting of job notifications (#108)

* Alter counting of job notifications

* Move calculation of unread messages to reducer

* Fix refactor

* Add missing total

* Fix for which notifications counters are displayed

Co-authored-by: Jarosenb <jrose

--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -57,15 +57,10 @@
     margin-top: 20px;
 }
 
-.dashboard-items {
+.sysmon-wrapper {
     font-size: 14px;
 }
 
 .dashboard-content .btn {
     padding: 0;
-}
-
-.dashboard-items .ReactTable .rt-th,
-.dashboard-items .ReactTable .rt-td {
-    color: #707070;
 }
