--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -9,6 +9,7 @@
   overflow: scroll;
   border-bottom: 1px solid #707070;
   max-height: inherit; /* inherit max-height from parent wrapper */
+  font-size: 0.78em;
 
   thead {
     user-select: none;
@@ -33,7 +34,7 @@
       border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
 
-    tr:nth-child(odd):not([class=-status]) {
+    tr:nth-child(even):not([class=-status]) {
       background-color: rgba(0, 0, 0, 0.03);
     }
     tr:hover:not([class=-status]) {
@@ -43,7 +44,7 @@
     td {
       display: flex;
       align-content: center;
-      padding: 0.5em var(--cell-horizontal-padding);
+      padding: 0.7em var(--cell-horizontal-padding);
       margin: auto 0; /* vertically center span content */
       overflow: hidden;
       text-overflow: ellipsis;
