FP-341: UI/UX: Fix cruft

--- a/client/src/components/DataFiles/DataFilesSearchbar/DataFilesSearchbar.module.css
+++ b/client/src/components/DataFiles/DataFilesSearchbar/DataFilesSearchbar.module.css
@@ -15,7 +15,11 @@
 }
 /* Ensure `.clear-button` text does not wrap at (arbitrary) 1280px laptop width */
 /* WARN: Non-standard un-documented first-party breakpoint */
-@media (max-width: 1700px) { .query-fieldset { width: 460px; } }
+@media (max-width: 1700px) {
+    .query-fieldset {
+        width: 460px;
+    }
+}
 /* FP-563: Support count in status message */
 .summary-fieldset {
     /* No styles necessary, but defining class for consistency */
