--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.module.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.module.scss
@@ -15,6 +15,8 @@
   border-bottom: var(--global-border-width--normal) solid var(--global-color-primary--dark);
   max-height: inherit; /* inherit max-height from parent wrapper */
 
+  font-size: 0.75rem; /* 12px (10px design * 1.2 design-to-app ratio) */
+
   thead {
     /* TODO: After all tables use `react-table-7`, move these styles to `elements/table.css` for `thead`? */
     user-select: none;
