--- a/client/src/styles/trumps/_u-ellipsis.scss
+++ b/client/src/styles/trumps/_u-ellipsis.scss
@@ -1,5 +1,7 @@
 .u-ellipsis {
   /* display: block; *//* Set relevant value in consumer styelsheet */
 
-  @include truncate-with-ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
