FP-204/FP-557: Remove margin on horz DL

--- a/client/src/components/_common/DescriptionList/DescriptionList.module.scss
+++ b/client/src/components/_common/DescriptionList/DescriptionList.module.scss
@@ -1,7 +1,10 @@
 @import '../../../styles/tools/mixins.scss';
 
-.container {
-  /* … */
+.container.is-horz {
+  margin-bottom: 0; /* overwrite Bootstrap's `_reboot.scss` */
+  & dd {
+    margin-bottom: 0; /* overwrite Bootstrap's `_reboot.scss` */
+  }
 }
 
 /* Children */
