FP-204/FP-557: Remove margin on horz DL
Cherry-picked by Nathan

--- a/client/src/components/_common/DescriptionList/DescriptionList.module.css
+++ b/client/src/components/_common/DescriptionList/DescriptionList.module.css
@@ -1,5 +1,8 @@
-.container {
-  /* … */
+.container.is-horz {
+  margin-bottom: 0; /* overwrite Bootstrap's `_reboot.scss` */
+  & dd {
+    margin-bottom: 0; /* overwrite Bootstrap's `_reboot.scss` */
+  }
 }
 
 /* Children */
