--- a/client/src/components/_common/DescriptionList/DescriptionList.module.css
+++ b/client/src/components/_common/DescriptionList/DescriptionList.module.css
@@ -15,33 +15,30 @@
   display: inline;
   margin-right: 0.25em;
 }
-.is-horz .value {
+.is-horz > .value {
   white-space: nowrap;
 }
 
 /* Types */
 
-.is-vert {
-  /* … */
-}
 .is-horz {
   display: flex;
   flex-direction: row;
 }
-.is-horz .key ~ .key::before {
+.is-horz > .key ~ .key::before {
   content: '|';
   display: inline-block;
 }
-.is-horz.is-narrow .key ~ .key::before {
+.is-horz.is-narrow > .key ~ .key::before {
   margin-left: 0.5em;
   margin-right: 0.5em;
 }
-.is-horz.is-wide .key ~ .key::before {
+.is-horz.is-wide > .key ~ .key::before {
   margin-left: 1em;
   margin-right: 1em;
 }
 
-.is-vert.is-narrow .value {
+.is-vert.is-narrow > .value {
   /* TODO: Support mixins, but prevent SCSS pollution in `src/styles/` */
   /* HACK: CSS Modules will NOT compose with nested classes */
   /* composes: u-ellipsis from '../../../styles/trumps/_u-ellipsis.scss'; */
@@ -51,5 +48,5 @@
 }
 
 /* Overwrite Bootstrap `_reboot.scss` */
-.is-vert.is-narrow .value { margin-left: 0; }
-.is-vert.is-wide .value   { margin-left: 2.5rem; } /* 40px Firefox default */
+.is-vert.is-narrow > .value { margin-left: 0; }
+.is-vert.is-wide > .value   { margin-left: 2.5rem; } /* 40px Firefox default */
