--- a/client/src/styles/settings/color.css
+++ b/client/src/styles/settings/color.css
@@ -15,7 +15,9 @@
 
     /* Distinct Hues */
     --global-color-accent--normal: #9D85EF;
-        --global-color-accent--light: #9D85EF40; /* Not used, yet. *//* `normal` @ 25% opacity */
+        /* TODO: Use `--light` not `hack` (search for manual instances */
+        --global-color-accent--light-hack: #9D85EF40; /* Not used, yet. Equals `--normal` @ 25% opacity */
+        --global-color-accent--light: #dfdaf5;
     --global-color-success--normal: #43D130;
         --global-color-success--alt: #C7CE1D;
     --global-color-warning--normal: #9D85EF;
