--- a/client/src/components/History/HistoryViews/JobHistoryModal.css
+++ b/client/src/components/History/HistoryViews/JobHistoryModal.css
@@ -1,5 +1,5 @@
 /* Overrides Bootstrap `.modal-body`, because we need to
    "undo" the padding added there */
 .job-history-modal .modal-body {
-    padding: 0 0 0 0;
+    padding: 0;
 }
