--- a/client/src/components/History/HistoryViews/JobHistoryModal.module.scss
+++ b/client/src/components/History/HistoryViews/JobHistoryModal.module.scss
@@ -44,6 +44,11 @@
 dl.panel-content {
   margin-bottom: 0; /* overwrite Bootstrap's `_reboot.scss` */
 }
+/* Any preformatted values (like system output) should use a `pre` tag */
+.panel-content pre {
+  white-space: pre-wrap;
+  margin-bottom: 0; /* overwrite Bootstrap's `_code.scss` */
+}
 
 /* Messaging */
 .error {
