Task/fp 318 job history modal  ui tweaks (#140)
* Quick/support nested horz dl comp (#134)

* Quick: Nested DL List in UI Patterns

* Quick: Style Horizontal Nested DL List

* Task/Fp 562: update job status mapping (#137)

* Update text to display for CLEANING_UP and ARCHIVING

* Subscribe to CLEANING_UP + PAUSED and remove CANCELLED

CANCELLED is no longer a state in tapis

* FP-515/FP-354: Better Unit Tests (#104)

* FP-515/FP-354: Better Unit Tests

* FP-515/FP-354: Remove Outdated Styles

* Add Elasticsearch caching for TAS allocations. (#135)

* Add Elasticsearch caching for TAS allocations.

* remove unused import

Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

* FP-318: UI: Remove excess <dl> markup

* FP-318: UI: Link comp. to accept text as children

* FP-318: UI: Move Failure Report into Status (…)

Wes makes design decision. Craig gave him some freedom on this temp UI.

* FP-318: UI: Remove duplicat css

* FP-318: Expand: Add className support

* Improve padding override

Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

* FP-318: UI: Use DL component for left panel

* FP-318: UI: Status message text appropriate format

* FP-318: UI: Move Failure Report into Status (…)

Report this as last status message, because it helps communication between support team and user.

Co-authored-by: Nathan Franklin <nfranklin@tacc.utexas.edu>
Co-authored-by: Jake Rosenberg <jrosenberg@tacc.utexas.edu>
Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

--- a/client/src/components/History/HistoryViews/JobHistoryModal.module.scss
+++ b/client/src/components/History/HistoryViews/JobHistoryModal.module.scss
@@ -32,11 +32,6 @@
   min-width: 200px;
 }
 
-.left-panel.n {
-  border-right: var(--border);
-  min-width: 200px;
-}
-
 .right-panel {
   width: 100%;
   overflow-y: scroll;
@@ -45,9 +40,14 @@
 .panel-content {
   padding: 20px;
 }
-
-.label {
-  font-weight: 800;
+/* The `dl` comes from the `DescriptionList` component */
+dl.panel-content {
+  margin-bottom: 0; /* overwrite Bootstrap's `_reboot.scss` */
+}
+/* Any preformatted values (like system output) should use a `pre` tag */
+.panel-content pre {
+  white-space: pre-wrap;
+  margin-bottom: 0; /* overwrite Bootstrap's `_code.scss` */
 }
 
 /* Messaging */
