--- a/client/src/components/_common/Expand/Expand.module.scss
+++ b/client/src/components/_common/Expand/Expand.module.scss
@@ -3,6 +3,7 @@
 /* Prevent from butting up against its label (like inside `DescriptionList`) */
 dd .container {
   margin-top: 0.25rem; /* copied from Bootstrap `.mt-1` styles */
+  margin-bottom: 0.25rem; /* WARN: copied from above, because it "looks good" */
 
   border-radius: 0; /* overwrite Bootstrap `Card`'s `.card` */
 }
