--- a/client/src/components/History/HistoryViews/JobHistoryModal.css
+++ b/client/src/components/History/HistoryViews/JobHistoryModal.css
@@ -3,3 +3,9 @@
 .job-history-modal .modal-body {
     padding: 0;
 }
+
+/* Overrides Bootstrap `.nav-link:hover`, because the `<NavLink>`
+   component is only mostly for routing (not styling) */
+.nav-link:hover {
+    text-decoration: underline;
+}
