Contact information padding removed

--- a/client/src/components/Allocations/AllocationsModals/AllocationsTeamViewModal/AllocationsContactCard/AllocationsContactCard.module.scss
+++ b/client/src/components/Allocations/AllocationsModals/AllocationsTeamViewModal/AllocationsContactCard/AllocationsContactCard.module.scss
@@ -7,9 +7,9 @@
   overflow: auto;
 }
 .title {
-  padding: 0.25rem;
+  padding: 0.25rem 0;
   font-weight: bold;
 }
 .details {
-  padding: 0.25rem;
+  padding: 0.25rem 0;
 }
