Task/fp 318 job history modal: ui tweaks, more data, expand panel tweaks (#143)
* Task/fp 318 job history modal  ui tweaks (#140)

* Quick/support nested horz dl comp (#134)

* Quick: Nested DL List in UI Patterns

* Quick: Style Horizontal Nested DL List

* Task/Fp 562: update job status mapping (#137)

* Update text to display for CLEANING_UP and ARCHIVING

* Subscribe to CLEANING_UP + PAUSED and remove CANCELLED

CANCELLED is no longer a state in tapis

* FP-515/FP-354: Better Unit Tests (#104)

* FP-515/FP-354: Better Unit Tests

* FP-515/FP-354: Remove Outdated Styles

* Add Elasticsearch caching for TAS allocations. (#135)

* Add Elasticsearch caching for TAS allocations.

* remove unused import

Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

* FP-318: UI: Remove excess <dl> markup

* FP-318: UI: Link comp. to accept text as children

* FP-318: UI: Move Failure Report into Status (…)

Wes makes design decision. Craig gave him some freedom on this temp UI.

* FP-318: UI: Remove duplicat css

* FP-318: Expand: Add className support

* Improve padding override

Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

* FP-318: UI: Use DL component for left panel

* FP-318: UI: Status message text appropriate format

* FP-318: UI: Move Failure Report into Status (…)

Report this as last status message, because it helps communication between support team and user.

Co-authored-by: Nathan Franklin <nfranklin@tacc.utexas.edu>
Co-authored-by: Jake Rosenberg <jrosenberg@tacc.utexas.edu>
Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

* Task/fp 318 job history modal  expand tweaks (#141)

* Quick/support nested horz dl comp (#134)

* Quick: Nested DL List in UI Patterns

* Quick: Style Horizontal Nested DL List

* Task/Fp 562: update job status mapping (#137)

* Update text to display for CLEANING_UP and ARCHIVING

* Subscribe to CLEANING_UP + PAUSED and remove CANCELLED

CANCELLE

--- a/client/src/components/History/HistoryViews/JobHistoryModal.css
+++ b/client/src/components/History/HistoryViews/JobHistoryModal.css
@@ -3,3 +3,9 @@
 .job-history-modal .modal-body {
     padding: 0;
 }
+
+/* Overrides Bootstrap `.nav-link:hover`, because the `<NavLink>`
+   component is only mostly for routing (not styling) */
+.job-history-modal .nav-link:hover {
+    text-decoration: underline;
+}
